Tue Jul  8 02:31:30 2003  Tim Janik  <timj@gtk.org>

	* bsemidisynth.[hc]: added slot for postprocessing synthesizer.
	default to 16 voices.

Mon Jul  7 16:42:05 2003  Tim Janik  <timj@gtk.org>

	* bsestorage.c (wstore_data_handle_reader): remove debugging code.

Sat Jul  5 02:49:20 2003  Tim Janik  <timj@gtk.org>

	* bsesong.[hc]: added pnet property to set postprocessing synthesis
	network per song. added sub synth (null-shortcut) after track merger
	to hold pnet.

	* bsetrack.[hc]: added pnet property and sub synth to support post
	processing synthesis networks like above.

	* bsesubsynth.[hc]: added bse_sub_synth_set_null_shortcut(). this
	enables automatic signal-through connections if no snet is set.

Wed Jun 25 00:18:11 2003  Tim Janik  <timj@gtk.org>

	* bseserver.proc: seperate ladspa and core plugin loading.

Tue Jun 24 23:25:54 2003  Tim Janik  <timj@gtk.org>

	* bseserver.proc (register_scripts): fixed memleak in if() branch.

	* bsecategories.c (bse_category_from_id): free category fields before
	overwriting them.

Mon Jun 23 20:33:33 2003  Tim Janik  <timj@gtk.org>

	* bsejanitor.proc:
	* bsejanitor.[hc]: cleaned up connection shutdown logic. spew connection
	aborts to stderr. reap remote child (with small delay after killing if
	necessary). 

Fri Jun 20 00:00:31 2003  Tim Janik  <timj@gtk.org>

	* gsldatahandle-mad.c: fix BSE not compiling without libmad,
	reported by Daniel MacDonald <danboid@yahoo.co.uk>.

Thu Jun 19 23:21:39 2003  Tim Janik  <timj@gtk.org>

	* bsecategories.proc: get rid of debugging junk.

	* bsemidiicontroller.c:
	* bsepcminput.c:
	* bsepcmoutput.c:
	* bsesubinstrument.c:
	* bsesubiport.c:
	* bsesubkeyboard.c:
	* bsesuboport.c:
	* bsesubsynth.c: fix GType ids still being stored in 32bit integers,
	which breaks on alpha where type ids are 64bit.
	tracked down by Sam Hocevar <sam@zoy.org>.

Tue Jun 17 14:40:26 2003  Tim Janik  <timj@gtk.org>

	* bseserver.c (engine_init): turn assertion into warning, so we don't